# bsx-rs

./: Cargo.toml  README.md  bors.toml
.github/workflows/: base.yml  coverage.yml  exhaustive.yml  lint.yml  nightly.yml  updates.yml
benches/: decode.rs  encode.rs
cli/: Cargo.toml  README.md
cli/src/: main.rs
examples/: decode.rs  encode.rs
src/: alphabet.rs  decode.rs  encode.rs  lib.rs
tests/: decode.rs  encode.rs
