[package]
name = "bsx"
version = "0.1.0"
authors = ["Wim Looman <bsx.crate@nemo157.com>"]
description = "Arbitrary ASCII base encoding"
repository = "https://github.com/Nemo157/bsx-rs"
readme = "README.md"
keywords = ["base-x"]
license = "MIT/Apache-2.0"
edition = "2018"

[workspace]
members = ["cli"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = ["std"]
std = ["alloc"]
alloc = []

[dev_dependencies]
criterion = "0.3"
base58 = "0.1.0"
bs58 = "0.4.0"
rust-base58 = "0.0.4"
assert_matches = "1.3.0"

[[bench]]
name = "encode"
path = "benches/encode.rs"
harness = false

[[bench]]
name = "decode"
path = "benches/decode.rs"
harness = false
